Add admin users crud, update style and refactor Gemfile

--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -1,1 +1,12 @@
 fr:
+  activerecord:
+    attributes:
+      user:
+        email: Email
+        password: Mot de passe
+        password_confirmation: Confirmation du mot de passe
+        role: Rôle
+        roles:
+          standard: Standard
+          admin: Administrateur
+          super_admin: Super administrateur
