--- a/config/locales/activerecord.fr.yml
+++ b/config/locales/activerecord.fr.yml
@@ -1,4 +1,9 @@
 fr:
   activerecord:
     models:
+      user: utilisateur
     attributes:
+      user:
+        first_name: Prénom
+        last_name: Nom
+        email: Email
